bdr.BDR.scala.error
Erreur de compilation :
BDR:23: error: value fini is not a member of Unit
possible cause: maybe a semicolon is missing before `value fini'?
  } fini=true
    ^